--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 :root {
@@ -40,9 +40,12 @@ body {
   align-items: center;
   cursor: pointer;
 }
+.navigation.active {
+  width: 250px;
+}
 
 .menuToggle::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 30px;
   height: 2px;
@@ -50,9 +53,11 @@ body {
   transform: translateY(-8px);
   transition: 0.5s;
 }
-
+.navigation.active .menuToggle::before {
+  transform: translateY(0) rotate(45deg);
+}
 .menuToggle::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 30px;
   height: 2px;
@@ -60,4 +65,95 @@ body {
   transform: translateY(8px);
   transition: 0.5s;
   box-shadow: 0 -8px 0 #333;
+}
+
+.navigation.active .menuToggle::after {
+  transform: translateY(0) rotate(-45deg);
+  box-shadow: 0 0 0 #333;
+}
+
+.navigation ul {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.navigation ul li {
+  position: relative;
+  width: 100%;
+  height: 76px;
+  border-radius: 12px;
+  border: 8px solid transparent;
+  transition: 0.5s;
+}
+
+.navigation ul li.active {
+  transform: translateX(30px);
+  background: var(--bg);
+}
+
+.navigation ul li::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: -28px;
+  right: -10px;
+  background-color: transparent;
+  border-bottom-right-radius: 20px;
+  box-shadow: 6px 5px 0 5px var(--bg);
+  transform: scale(0);
+  transform-origin: bottom right;
+  transition: 0.5s;
+}
+
+.navigation ul li.active::before {
+  right: 22px;
+  transform: scale(1);
+}
+
+.navigation ul li::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  bottom: -28px;
+  right: -10px;
+  background-color: transparent;
+  border-top-right-radius: 20px;
+  box-shadow: 6px -3px 0 3px var(--bg);
+  transform: scale(0);
+  transform-origin: bottom right;
+  transition: 0.5s;
+}
+
+.navigation ul li.active::after {
+  right: 22px;
+  transform: scale(1);
+}
+
+.navigation ul li a {
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+  z-index: 10;
+}
+
+.navigation ul li a .icon {
+  position: relative;
+  display: block;
+  min-width: 60px;
+  height: 60px;
+  border-radius: 10px;
+  background: #fff;
+  font-size: 1.75em;
+  line-height: 60px;
+  border: 6px solid transparent;
+}
+ 
+.navigation ul li.active a .icon {
+  
 }
