--- a/style/style.css
+++ b/style/style.css
@@ -18,13 +18,13 @@ body {
 
 .navigation {
   position: fixed;
-  inset: 40px 0 40px 2px;
+  inset: 40px 0 40px 20px;
   background: #fff;
   width: 75px;
   display: flex;
   justify-content: center;
-  align-items: center;
   transition: 0.5s;
+  padding-top: 90px;
 }
 
 .menuToggle {
@@ -148,12 +148,63 @@ body {
   min-width: 60px;
   height: 60px;
   border-radius: 10px;
-  background: #fff;
   font-size: 1.75em;
   line-height: 60px;
   border: 6px solid transparent;
+  transition: 0.5s;
 }
- 
+
 .navigation ul li.active a .icon {
-  
+  color: #fff;
+  background: var(--clr);
+}
+
+.navigation ul li a .icon::before {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--clr);
+  filter: blur(8px);
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.navigation ul li.active a .icon::before {
+  opacity: 0.5;
+}
+
+.navigation ul li a .icon::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: -60px;
+  width: 15px;
+  height: 15px;
+  background: var(--clr);
+  border: 8px solid var(--bg);
+  border-radius: 50%;
+}
+
+.navigation ul li a .text {
+  position: relative;
+  padding: 0 15px;
+  color: #333;
+  display: flex;
+  align-items: center;
+  height: 60px;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+
+.navigation.active ul li a .text {
+  opacity: 1;
+  visibility: visible;
+}
+
+.navigation.active ul li.active a .text {
+  color: #fff;
 }
